# solr-rust

./: Cargo.toml  README.md
